Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1093

[proton-c++] pragma to hide a warning in GCC introduces a warning in Windows

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.12.0
    • proton-0.12.0
    • cpp-binding
    • None
    • Visual Studio 20xx

    Description

      proton-c\bindings\cpp\src\contexts.cpp(48) : warning C4068: unknown pragma
      #pragma GCC diagnostic ignored "-Wold-style-cast"

      commit fd52a33

      I propose fixing this by moving the pragma into cmake to leave the source with no #pragma and with no conditional to hide the pragma.

      Windows has plenty of other warnings if we're serious about squelching them.

      Attachments

        Activity

          People

            chug Charles E. Rolke
            chug Charles E. Rolke
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: