PROTON-1093 [proton-c++] pragma to hide a warning in GCC introduces a warning in Windows

Removed the GCC pragma (actually added for clang)
Added -Wno-old-style-cast to the list of acceptable warnings for clang.
Fixed clang warning in C code (tolower macro multiple eval of arg with side effects.)
Fixed ctor warning on windows in container.cpp